--- a/GPS.html
+++ b/GPS.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>GPS Analysis</title>
+        <title>GPS Task</title>
+        
+        <header><u>GPS Analysis</u></header>
     </head>
 
         <style>
-            title {
-                background-color: aquamarine;
-                font-family: sans-serif;
-                font-size: 100px;
+            header {
                 text-align: center;
+                font-family: inherit;
+                padding: 10px;
+                background-color: #004d99;
+                color: white;
+                font-size: 100px;
             }
-                
         </style>
 
         <script>
