--- a/gps_updated.html
+++ b/gps_updated.html
@@ -76,7 +76,8 @@
         <article id="graphs">
                 <canvas id="altitude-canvas" height="60"></canvas> 
                 <canvas id="hr-canvas" height="60"></canvas>
-                <canvas id="speed-canvas" height="60"></canvas>
+            <canvas id="speed-canvas" height="60"></canvas>
+            //hello
         </article>
 </body> 
     <script>
