--- a/gps_updated.html
+++ b/gps_updated.html
@@ -42,7 +42,8 @@
             }
             
             #graphs {
-                width: 65%;
+                width: 100%;
+                padding-left: 35%;
             }
             
         </style>
